add struct, need fix

--- a/ip-calc-qt-window/CMakeLists.txt
+++ b/ip-calc-qt-window/CMakeLists.txt
@@ -17,12 +17,16 @@ set(PROJECT_SOURCES
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        ipcalculator.cpp
+        ipcalculator.h
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(ip-calc-qt-window
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        ipcalculator.h
+        ipcalculator.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET ip-calc-qt-window APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
